--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to my Web Page!</h1>
-    <h1>HI, There I am Web developer</h1>
+    <h1 color:blue;>HI, There I am Web developer!</h1>
     <h2>I do Front-end developing</h2>
     <h2>I am your friend</h2>
     Hello, World!
